# Agentex

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  foundry.toml  package-lock.json  package.json  skills-lock.json  tsconfig.json
aomi/agentex-app/: Cargo.toml
aomi/agentex-app/src/: client.rs  lib.rs  tool.rs
contracts/: AgentexRegistry.sol  DemoTradeVenue.sol  ExperienceAccessObligation.sol
demo/: .vercelignore  live-runbook.md  market-view.html  vercel.json
docs/: TODO.md  openclaw-monad-agentex-demo.md  pitch.md  setup.md
docs/knowledge/: aomi-sdk.md  erc-8004.md  filecoin-pin.md  filecoin-wallet.md  openclaw-cluster.md
docs/superpowers/plans/: 2026-05-15-ipfs-openclaw-hackathon.md  2026-05-18-agentex-live-v1-demo.md  2026-05-22-pitch-deck.md  2026-05-22-web-ui-redesign-plan.md
docs/superpowers/specs/: 2026-05-12-agenesis-audit-replay-design.md  2026-05-15-agenesis-gene-market-architecture.md  2026-05-15-agenetics-gene-market-architecture.md  (+5 more)
scripts/: check-aomi-live.ts  check-live-setup.ts  compile-contracts.ts  deploy-demo-contracts.ts  deploy-openclaw-kind.ts  replace-terms.py  run-aomi-round.ts  run-live-v1.ts  run-local-v1.ts  write-aomi-registration.ts
src/: aomi.ts  arkhai.ts  cli.ts  contracts.ts  env.ts  experience.ts  filecoin.ts  gene.ts  host-identity.ts  index.ts  market.ts  openclaw.ts  registry.ts  schemas.ts  server.ts  shared.ts  tools.ts  venue.ts
test/: agenetics.test.ts  agentex.test.ts  memexchange.test.ts
web/: README.md  copy_tsx.py  fix_accordion.py  next.config.ts  out.html  package-lock.json  package.json
(+19 files in other folders)
