[package]
name = "agentex-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
aomi-sdk = "0.1.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
